Internal Linking enabled using [page], Todo #4

--- a/templates/view.html
+++ b/templates/view.html
@@ -20,7 +20,7 @@
 			[<a href="/edit/{{.Title}}">edit</a>]
 		</div>
 		<div class="row">
-			{{printf "%s" .Body}}
+			{{.Body}}
 		</div>		
 	</div>
 </body>
